# Alexandria-Protokoll

./: .gitignore  Alexandria_core.py  CHANGELOG.md  README.md  adjudication.py  alexandria_dashboard.py  db.py  diff.py  openalex_ingest.py  pipeline.py  pyproject.toml  relations.py  requirements.txt  schema.py  seal.py
alexandria_core/: __init__.py  audit.py  builder.py  exceptions.py  maturity.py  patch.py  sources.py
docs/: architecture.md
examples/: demo_pipeline.py
tests/: __init__.py  test_diff.py  test_patch.py  test_pipeline.py  test_schema.py
